[FIXED MIFOS: 3361, 3989,3991,3996,4133,4138,3990] - layout issues

--- a/userInterface/src/main/webapp/pages/css/main.css
+++ b/userInterface/src/main/webapp/pages/css/main.css
@@ -161,7 +161,7 @@ html, body {
 .content_panel h1 {
     margin: 0 0 15px 0;
     color: #CC6601;
-    font-size: 12px;
+    font-size:15px;
     font-weight: bold;
 }
 
@@ -402,7 +402,7 @@ input[type="checkbox"], input.checkbox {
 }
 
 #interestCalculationFrequency, #interestPostingMonthlyFrequency, #interestRate {
-    width: 76px;
+    width: 40px;
 }
 
 #chinese-info-on-login-page {
